# tetris-game

./: README.md  pyproject.toml
src/: main.py
src/tetris/: __init__.py  board.py  config.py  game.py  persistence.py  pieces.py  render.py  sound.py
src/tetris_game.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_board.py  test_persistence.py
